@@ -36,6 +36,7 @@ extern UV  nth_ramanujan_prime(UV n);
 extern UV  nth_ramanujan_prime_upper(UV n);
 extern UV  nth_ramanujan_prime_lower(UV n);
 extern int sum_primes(UV low, UV high, UV *sum);
+extern int sum_primes128(UV n, UV *hisum, UV *losum);
 extern void print_primes(UV low, UV high, int fd);
 
 extern int powerof(UV n);
